Automação de Testes

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,5 @@ replay_pid*
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/java,visualstudiocode
+automation-pratice-selenium/.vscode/settings.json
+automation-pratice-selenium/.vscode/settings.json
